--- a/proportal/views/pages/list/file.tt
+++ b/proportal/views/pages/list/file.tt
@@ -1,15 +1,13 @@
 [%	WRAPPER 'inc/page_wrapper.tt';
-	title = 'IMG ProPortal: Taxon List';
+	title = 'IMG ProPortal: File Downloads List';
 %]
-<h2>Taxon List</h2>
+<h2>File downloads</h2>
 <section class="info--data_type page-intro">
 	<p>This page provides an overview of the taxa in IMG relevant to the ProPortal project. This comprises <i>Prochlorococcus</i>, <i>Synechococcus</i>, cyanophage species and metagenomes from marine environments.
 	</p>
 </section>
 <div id="main">
 [%	IF results.taxon.size > 0;	%]
-<!-- 	add this wrapper back when we implement the cart functionality. -->
-[%#		WRAPPER 'inc/cart_genome_add.tt' %]
 		<table class="lined">
 			<thead>
 			<tr class="underline">
@@ -18,21 +16,32 @@
 				<th>Taxon display name</th>
 				<th>Dataset type</th>
 				<th>ProPortal subset</th>
+[%		FOR f IN data_filters.schema.file_type.enum;
+			'<th>' _ f _ '</th>';
+		END; %]
 			</tr>
 			</thead>
 			<tbody>
-[%			FOR t IN results.taxon %]
+[%		FOR t IN results.taxon %]
 			<tr>
 				<td><input type="checkbox" class="sample-data__cbox" name="taxon_oid[]" value="[% t.taxon_oid %]" id="cbox_[% t.taxon_oid %]"></td>
 				<td><a href="[% link( 'details', { type => 'taxon', taxon_oid => t.taxon_oid } ) %]">[% t.taxon_oid %]</a></td>
 				<td><a href="[% link( 'details', { type => 'taxon', taxon_oid => t.taxon_oid } ) %]">[% t.taxon_display_name %]</a></td>
 				<td>[% t.dataset_type %]</td>
 				<td>[% t.pp_subset %]</td>
+[%			FOR f IN data_filters.schema.file_type.enum %]
+			<td>
+[%				IF t.$f %]
+	<a href="/api/details/file/taxon?taxon_oid=[% t.taxon_oid %]&amp;file_type=[% f %]">
+		[% f %]
+	</a>
+[%				END;  # end if %]
+			</td>
+[%			END; # end FOR f IN... %]
 			</tr>
-[%			END %]
+[%		END; # end FOR t IN results.... %]
 			</tbody>
 		</table>
-[%#		END; # end wrapper 	%]
 
 [%	ELSE; # END if... %]
 <p>No taxa found</p>
