--- a/proportal/src/css/sass/partials/_buttonBar.scss
+++ b/proportal/src/css/sass/partials/_buttonBar.scss
@@ -6,7 +6,7 @@ button bar usually found under pageTitle
 	float: right;
 	clear: both;
 
-	button {
-		padding: 10px;
-		font-size: 75%; }
+// 	button {
+// 		padding: 10px;
+// 		font-size: 75%; }
 }	
