--- a/proportal/public/css/styleGuide.css
+++ b/proportal/public/css/styleGuide.css
@@ -1,28 +1,27 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto");
-#wrap {
-  margin: auto;
-  width: 1300px; }
-
 #header {
   color: white;
-  padding: 30px;
-  padding-left: 50px;
+  padding: 50px;
   text-align: left;
-  border-bottom: 2px solid #959595; }
+  border-bottom: 2px solid #959595;
+  width: 100%;
+  height: 160px;
+  clear: both; }
+
+#wrap {
+  margin: auto;
+  width: 100%; }
 
 #main {
-  margin-left: 300px;
-  padding: 60px 50px 0 50px; }
+  padding: 50px 50px 0 300px;
+  float: none;
+  display: block; }
 
 #sidebar {
-  float: left;
-  width: 300px;
   padding: 50px;
-  padding-top: 60px;
-  top: 10px;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0; }
+  position: fixed;
+  top: 190px;
+  width: 300px; }
 
 #footer {
   clear: both;
@@ -129,99 +128,6 @@ ul.colorSwatch-list_sg {
 
 #color7 {
   background: #919090; }
-
-button,
-html input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-  background: #d3691b;
-  color: white;
-  font-size: 14px;
-  padding: 0.75rem 1.5rem;
-  text-transform: uppercase;
-  vertical-align: middle;
-  line-height: 1.5rem;
-  border: 2px solid transparent; }
-  button:hover,
-  html input[type="button"]:hover,
-  input[type="reset"]:hover,
-  input[type="submit"]:hover {
-    background: #a65315; }
-
-.pp_btn_std {
-  background: #648caa;
-  color: white; }
-  .pp_btn_std:hover {
-    background: #4e728d; }
-
-.pp_btn_orange {
-  background: #d3691b;
-  color: white; }
-  .pp_btn_orange:hover {
-    background: #a65315; }
-
-.pp_btn_disabled {
-  background: #919090;
-  color: white; }
-  .pp_btn_disabled:hover {
-    background: #919090; }
-
-.pp_btn_std_outline {
-  background: white;
-  color: #648caa;
-  border: 3px solid #648caa; }
-  .pp_btn_std_outline:hover {
-    color: #4e728d;
-    background: white;
-    border: 3px solid #4e728d; }
-
-.pp_btn_orange_outline {
-  background: white;
-  color: #d3691b;
-  border: 3px solid #d3691b; }
-  .pp_btn_orange_outline:hover {
-    color: #a65315;
-    background: white;
-    border: 3px solid #a65315; }
-
-.pp_btn_disabled_outline {
-  background: white;
-  color: #919090;
-  border: 3px solid #919090; }
-  .pp_btn_disabled_outline:hover {
-    color: #787676;
-    background: white;
-    border: 3px solid #787676; }
-
-.pp_btn_add {
-  display: inline-block;
-  width: 30px;
-  height: 30px;
-  padding: 0;
-  margin: 0;
-  background: #648caa;
-  font-size: 24px;
-  text-align: center;
-  vertical-align: middle;
-  color: #4e728d;
-  background: white;
-  border: 3px solid #648caa; }
-  .pp_btn_add:hover {
-    color: #4e728d;
-    background: white;
-    border: 3px solid #4e728d; }
-
-.pp_btn_remove {
-  display: inline-block;
-  width: 30px;
-  height: 30px;
-  padding: 0;
-  margin: 0;
-  background: #648caa;
-  font-size: 24px; }
-  .pp_btn_remove:hover {
-    background: #4e728d;
-    border: 3px solid #4e728d; }
 
 table.pp_table {
   width: 0;
