--- a/proportal/src/css/sass/modules/_base.scss
+++ b/proportal/src/css/sass/modules/_base.scss
@@ -79,10 +79,10 @@ canvas, template
 // leave out the border for these elements
 button, input, optgroup, select, textarea {
 //	in normalize.css
-//	margin: 0;
-//	font: inherit;
+	margin: 0;
+	font: inherit;
 	padding: 0;
-	vertical-align: baseline;
+	vertical-align: middle;
 }
 
 // set line-height on non-inline elements
