--- a/proportal/src/css/sass/partials/_nav_jgi-links.scss
+++ b/proportal/src/css/sass/partials/_nav_jgi-links.scss
@@ -44,20 +44,21 @@
 }
 
 .header-search {
+// 	margin-top: 5px;
+	
 	&__input {
-		margin-bottom: 0;
-		width: 3rem;
+		width: 10rem;
+		height: 2.3rem;
+		font-size: 1em; //$element-font-size;
 		&:active, &:focus {
 			width: 20rem;
-		}
+		}	
 	}
-	&__label {
-
-	}
+	&__label {	}
 	&__submit {
-		padding: 0 $gutter;
+		height: 2.3rem;
+		font-size: $element-font-size;
 	}
-
 }
 
 .mart-list-menu__link {
