--- a/proportal/views/inc/header_search.tt
+++ b/proportal/views/inc/header_search.tt
@@ -2,9 +2,16 @@
 	'insert_search_url_here';
 	%]" method="POST" role="search" class="inline-form header-search">
     <fieldset>
-        <label for="header-search" class="header-search__label"><span class="screen-reader">Search</span></label>
-        <input type="search" id="header-search" class="header-search__input" />
-		<input type="submit" class="header-search__submit" value="Search" />
+		<input type="search" id="header-search" class="header-search__input" />
+		<div style="clear: both; display: inline; float: right; margin-left: 5px;">	
+		    <button class="header-search__submit">Search</button>
+		</div>
+
+<!-- 	
+         <label for="header-search" class="header-search__label"><span class="screen-reader">Search</span></label>
+         <input type="search" id="header-search" class="header-search__input" />
+ 		<input type="submit" class="header-search__submit" value="Search" />
+ -->
 	    <!-- button class="header-search__submit">
 	    	<span class="is-vishidden">Search</span>
 	    </button -->
