--- a/proportal/src/css/sass/partials/_grid.scss
+++ b/proportal/src/css/sass/partials/_grid.scss
@@ -7,8 +7,7 @@ div.grid {
 }
 
 a.grid:link, a.grid:visited {
-	background: map-get( $jgi-palette, dk_blue );	//#eee;
-	color: white;	//map-get( $jgi-palette, black );		
+	color: $element-border-color;	//map-get( $jgi-palette, black );		
 
 	width: 230px;
 	height: 250px;
@@ -16,17 +15,11 @@ a.grid:link, a.grid:visited {
     margin: 5px;
     text-decoration: none;
     display: inline-block;
-    border: 0;
+    border: $element-border-width solid $element-border-color;
     clear: both;
 
 }
 
-
-a.grid:hover, a.grid:active {
-  background: white;	//map-get( $jgi-palette, dk_blue );
-  color: map-get( $jgi-palette, dk_blue );
-  border: 2px solid map-get( $jgi-palette, dk_blue );
-  
-  
-  cursor: pointer;
+a.grid:hover {
+	color: map-get( $jgi-palette, dk_blue );
 }
